2005-01-11  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: There might be multiple S.D assemblies (eg, if you
	build the 2.0 crap, you get a 1.1 and a 2.0). So use head -n1 when
	looking at gacutil

2005-01-11  Mike Kestner  <mkestner@novell.com>

	* configure.in : add test for System.Drawing. expand gtkdotnet.
	* Makefile.am : add gtkdotnet.
	* makefile.win32 : add gtkdotnet.
	* gtkdotnet/* : new .Net extensions assembly. Moved the sample
	sysdraw.cs Graphics class in here under the Gtk.DotNet namespace.
	* sample/sysdraw.cs : moved to gtkdotnet/Graphics.cs.
	* sample/drawing-sample.exe.config.in : killed.
	* sample/DrawingSample.cs : use Gtk.DotNet.Graphics.
	* sample/Makefile.am : make drawing-sample.exe build conditional
	on gtk-dotnet presence.

2005-01-11  Mike Kestner  <mkestner@novell.com>

	* gdk/Window.custom : add AddFilterForAll and RemoveFilterForAll
	methods to handle the window==null native case.
	[Fixes #71065]

2005-01-11  Mike Kestner  <mkestner@novell.com>

	* glib/Argv.cs : add automatic progname handling.
	* gdk/Global.custom : kill obsolete warnings by using GLib.Argv.

2005-01-11  Mike Kestner  <mkestner@novell.com>

	* gdk/Gdk.metadata : kill Colors since its methods are deprecated
	and it doesn't exist in 1.0.

2005-01-08  Ben Maurer  <bmaurer@ximian.com>

	* Makefile.include (install-data-local, uninstall-local): make
	this actually work for things that are disabled.

2005-01-08  Mike Kestner  <mkestner@novell.com>

	* configure.in : kill a ton of redundant stuff.
	* AssemblyInfo.cs.in : moved here, only need one.
	* Makefile.include : rules for building generated assemblies.
	* Makefile.am : removed gtk-sharp-2.0.pc handling.
	* */AssemblyInfo.cs.in : killed
	* */Makefile.am : refactored out a ton of rules to an include.
	* */*-pc.in : added Cflags entries pointing to the gapi files.
	* generator/CodeGenerator.cs : add -I: synonym --include.
	* gnomevfs/gnome-vfs-api.raw : remamed from gnomevfs-api.raw.