@@ -1,3 +1,8 @@
+2005-01-12  Mike Kestner  <mkestner@novell.com>
+
+	* sample/gnomevfs/*.cs : s/Test.Gnome.VFS/TestGnomeVfs to avoid
+	namespace collision problems with current mcs.
+
 2005-01-11  Ben Maurer  <bmaurer@ximian.com>
 
 	* configure.in: There might be multiple S.D assemblies (eg, if you
